--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 spring:
-  datasource:
-    dbcp2:
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/rest_with_spring_boot
-      username: root
-      password: 123456
+    datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/rest_with_spring_boot
+        username: root
+        password: 123456
     jpa:
-      hibernate:
-        ddl-auto: update
-      properties:
         hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
-        show-sql: false
+            ddl-auto: update
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.MySQL8Dialect
+            show-sql: false
